--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.inputsystem": "1.4.4",
     "com.unity.nuget.newtonsoft-json": "3.1.0",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.recorder": "4.0.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
